--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "rkylin_mc_wechat",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "rkylin-mc-wechat",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "Joeliu",
-  "license": "ISC"
+  "dependencies": {
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "jade": "~1.11.0",
+    "ejs": "~2.5.7",
+    "morgan": "~1.9.0",
+    "serve-favicon": "~2.4.5",
+    "wechat": "^2.1.0"
+  }
 }
