--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "node ./build/dev.js&&node ./bin/www",
+    "dist": "node ./build/dist.js&&node ./bin/www",
+    "test": "node ./build/test.js&&node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
